<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main_menu"
        android:icon="@drawable/mainmenu_icon"
        android:title="@string/menu_mainmenu" />
    <item
        android:id="@+id/recommendations"
        android:icon="@drawable/baseline_recommend_24"
        android:title="@string/recomendaciones" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/menu_profile" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings_icon"
        android:title="@string/settings_title" />
    <item
        android:id="@+id/help"
        android:icon="@drawable/help_icon"
        android:title="@string/menu_help" />
    <item
        android:id="@+id/logIn"
        android:icon="@drawable/login_icon"
        android:title="@string/login_title" />

</menu>
