<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainMenu"
    android:background="@color/white">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="61dp"
        android:padding="8dp"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#2E7D32"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/main_menu_title"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvUserStatus"
        android:layout_width="304dp"
        android:layout_height="102dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:gravity="center"
        android:text="@string/inicia_sesi_n_para_que_se_guarden_los_chats_dentro_de_la_aplicaci_n"
        android:textColor="#737373"
        android:textSize="18dp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tvUserHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="800dp"
        android:layout_marginEnd="80dp"
        android:gravity="end"
        android:text="@string/accede_a_nuestro_asistente_con_este_bot_n"
        android:textColor="#737373"
        android:textSize="16dp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/btnOpenDrawer"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:text="☰"
        android:textSize="26dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="Añadir"
        app:srcCompat="@android:drawable/ic_input_add"
        app:tint="@android:color/white"
        android:backgroundTint="@color/dark_green"/>

</FrameLayout>
