<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/btnOpenDrawer"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:text="☰"
            android:textSize="26dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"/>

        <!-- Foto de perfil -->
        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="224dp"
            android:layout_height="243dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="Foto de perfil"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_icon" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginVertical="16dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/usuario"
                android:textSize="14sp"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="marcos.patron"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_edit_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/profile_edit"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="14sp" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/nombre_completo"
                android:textSize="14sp"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/tv_full_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Marcos Patrón"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_edit_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/profile_edit"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="14sp" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/correo_electronico"
                android:textSize="14sp"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="mpatronb@educarex.es"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_edit_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/profile_edit"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="14sp" />
        </LinearLayout>



        <TextView
            android:id="@+id/tv_edit_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="40dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/profile_change_pass"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="14sp"
            android:textStyle="normal"
            android:layout_marginStart="10dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="1"
            tools:ignore="InefficientWeight" />


        <TextView
            android:id="@+id/tv_delete_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/profile_delete"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
